# MCAS

./: CMakeLists.txt  README.md
src/cas/: expr.cpp  expr.h  op.cpp  op.h  polynomial.cpp  polynomial.h  simplify.cpp  simplify.h
src/frontend/: display.h  main.cpp  postfix.cpp  postfix.h
